# OR_SSA_APP

./: .gitignore  CLEANUP_COMPLETED.md  CLEANUP_RECOMMENDATIONS.md  CLEANUP_SUMMARY.md  CONFIGURATION.md  ENHANCED_CONSTRAINT_SYSTEM_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  INVENTORY_IMPLEMENTATION_COMPLETE.md  MERGE_INTEGRATION_SUMMARY.md  MODULAR_ARCHITECTURE_DESIGN.md  MODULAR_ARCHITECTURE_PROGRESS.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  UI_RESTRUCTURE_SUMMARY.md  VRP_REFACTORING_COMPLETE.md  create_test_scenario.py  generate_infeasible_test.py  generate_test_scenarios.py  package-lock.json  pr_description.md  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  requirements-streamlit.txt  requirements.txt  reset_db.py  reset_scenarios.py  streamlit_app.py  test_app.py  test_infeasible_scenario.py  test_integration.py  test_real_data.py
backend/: __init__.py  celery.py  create_test_data.py  db.py  db_models.py  db_utils.py  django_settings.py  manage.py  settings.py  tasks.py  test_db.py
backend/core/: models.py  serializers.py  tests.py  urls.py  views.py  vrp_views.py
backend/models/: __init__.py
backend/orsaas_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/orsaas_core/: admin.py  apps.py  models.py
config/: models.yaml
docs/: API.md  DEVELOPMENT.md
fix_scripts/: fix_scenarios.py
frontend/: main.py  main_unified.py
sample_data/: inventory_sample_large.csv  inventory_sample_medium.csv  inventory_sample_small.csv  vrp_sample_large.csv  vrp_sample_medium.csv  vrp_sample_small.csv
(+59 files in other folders)
