# ----------------------------  pyproject.toml  ----------------------------
[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "or-ssa-app"          # 📦 pick any lowercase, hyphen‑safe name
version         = "0.1.0"
description     = "Streamlit UI + Django backend for OR_SSA_APP"
requires-python = ">=3.10"

# Core runtime deps (backend only)
dependencies = [
    "django>=4.2,<5",
]

# Optional extras: install with  pip install .[frontend]
[project.optional-dependencies]
frontend = [
    "streamlit>=1.34",
]

# Auto‑discover packages that have __init__.py
# We now include frontend* so python can import `frontend.components…`
[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]
# --------------------------------------------------------------------------
